--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,40 @@ li{
     width: 50%;
     padding: 10px;
 }
+footer{
+    color:rgb(253, 243, 229) ;
+    background-color:lightgrey;
+    text-align: end;
+    
+}
+button{
+    background-color: #f1c40f;
+    position: relative;
+    border:none;
+    text-align: center;
+}
+.product{
+    border-style: solid;
+    border-width: thin;
+    width:200px;
+}
+.final{
+    word-spacing:1px;
+    color: black;
+    text-align: left;
+    word-spacing:0%;
+
+}
+.level{
+    background-color: lightgrey;
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
+.btn{
+    text-align: center;
+    top: 50%;
+    left: 70px;
+}
+
